--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?sehvmpien#1" target="_blank">首页</a> | <a href="https://d2184d78prq5kd.cloudfront.net/1?nohytvh" target="_blank">动态网</a> | <a href="https://dl1ez95kskssm.cloudfront.net/2?vuuqqcizu" target="_blank">大纪元</a> | <a href="https://dqgl8k1bfvgsc.cloudfront.net/4?uvxkxaxs" target="_blank">看中国</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/pHh5q?njizqqtcu" target="_blank">新生网</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/tktpt?stnbvsi" target="_blank">阿波罗网</a> | <a href="https://dervszfjn9udk.cloudfront.net/Mjpvu?nwpwdbdoq" target="_blank">干净世界</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/10?kglqqjara" target="_blank">退党服务</a> | <a href="https://d2cenl0crtmzsc.cloudfront.net/Rffqf?nteinyxlo" target="_blank">明慧广播</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/nw9Vn?qnlunyvvo" target="_blank">传奇时代</a> | <a href="https://d14a0yccee2yym.cloudfront.net/AF9AG?yjttukj" target="_blank">新境界影视</a> | <a href="https://duxu97yt14q37.cloudfront.net/zqMQA?lpdmrcgr" target="_blank">文昭谈论</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/7?ydiwlx" target="_blank">明慧</a></p><p><a href="https://dlph7fabhsbfp.cloudfront.net/9?jdrrgxa" target="_blank">大法</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/3?sfdhhupj" target="_blank">新唐人</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/obAhT?itdxlgsfx" target="_blank">人民报</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/xXNHu?rfxbsdncv" target="_blank">放光明</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/5?lljzjkjxi" target="_blank">新纪元</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/6?bkaszckf" target="_blank">希望之声</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/11?vblyrcj" target="_blank">无界网络</a> | <a href="https://d1ntfewljph5k2.cloudfront.net/Pueji?xgbdncru" target="_blank">追查国际</a> | <a href="https://d18bx7gz18d1cs.cloudfront.net/16?zbvhigcw" target="_blank">明慧之窗</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/LdvzZ?ezfzhrv" target="_blank">细语人生</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/fBn3r?cbwonzggb" target="_blank">新世纪影视</a> | <a href="https://d3myewunzonann.cloudfront.net/PUWMb?uumluh" target="_blank">江峰时刻</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/8?fodsbs" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391231.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/09/id14339948-1-GettyImages-1241848950-ed.jpg-LSedit-1080x720-1-320x200.jpg"><p align="center">今年美国逾七千商店关门 哪些零售商关店最多</p></a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?ytxjwcyel#1" target="_blank">首页</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/1?sfpteee" target="_blank">动态网</a> | <a href="https://dycmgeziwp90b.cloudfront.net/2?vexdukcez" target="_blank">大纪元</a> | <a href="https://dvsmtoxipy5i5.cloudfront.net/4?bqugutvj" target="_blank">看中国</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/pHh5q?vwpgppkw" target="_blank">新生网</a> | <a href="https://d3siwajeg0khti.cloudfront.net/tktpt?xhsdftoy" target="_blank">阿波罗网</a> | <a href="https://d3malt9gyhsmb.cloudfront.net/Mjpvu?dmiygyfw" target="_blank">干净世界</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/10?cswoa" target="_blank">退党服务</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/Rffqf?gyyeou" target="_blank">明慧广播</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/nw9Vn?rfwuo" target="_blank">传奇时代</a> | <a href="https://db8nk66phkh66.cloudfront.net/AF9AG?cielanf" target="_blank">新境界影视</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/zqMQA?amsustfap" target="_blank">文昭谈论</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/7?xojoiyge" target="_blank">明慧</a></p><p><a href="https://d1kgsi70b35buf.cloudfront.net/9?lnlzgsbsy" target="_blank">大法</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/3?bzzljy" target="_blank">新唐人</a> | <a href="https://d1ff3ajoaf61nd.cloudfront.net/obAhT?miyfhb" target="_blank">人民报</a> | <a href="https://d2b68ib2p4x8t6.cloudfront.net/xXNHu?zuhtrhye" target="_blank">放光明</a> | <a href="https://d15m60lsma25jk.cloudfront.net/5?ahlkc" target="_blank">新纪元</a> | <a href="https://dqcg8pdekez1x.cloudfront.net/6?nchcjjozi" target="_blank">希望之声</a> | <a href="https://d124e4v75n9sum.cloudfront.net/11?ebwnmr" target="_blank">无界网络</a> | <a href="https://d2cj9ah31kn8fl.cloudfront.net/Pueji?nblwgzb" target="_blank">追查国际</a> | <a href="https://d78f5frq5siq8.cloudfront.net/16?hpqfpzokm" target="_blank">明慧之窗</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/LdvzZ?txdyunax" target="_blank">细语人生</a> | <a href="https://d1vp4chj90rvdj.cloudfront.net/fBn3r?bwcoyxtk" target="_blank">新世纪影视</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/PUWMb?ozdvwskvq" target="_blank">江峰时刻</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/8?wdnlg" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391476.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/12/id14386965-AFP__20241208__36PV47E__v1__Preview__UsPoliticsSyria-320x200.jpg"><p align="center">拜登和韩代总统通话：美韩联盟是印太和平关键</p></a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391476.md#1" title="拜登和韩代总统通话：美韩联盟是印太和平关键""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/12/id14386965-AFP__20241208__36PV47E__v1__Preview__UsPoliticsSyria-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391231.md#1" title="今年美国逾七千商店关门 哪些零售商关店最多""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/09/id14339948-1-GettyImages-1241848950-ed.jpg-LSedit-1080x720-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391287.md#1" title="深圳爆炸堕亡女子告别式取消 市民挂横幅悼念""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/12/id14391338-28cd2d838de93ae7966fd96ce5dea67e-320x200.png">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391062.md#1" title="大陆车检强制报废车辆 律师：损害百姓利益""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/12/id14391067-GettyImages-1086028838-320x200.jpg">&nbsp;</a>
@@ -11,20 +12,20 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391066.md#1" title="美国多地周末会遭冰暴等恶劣气候袭击""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/12/id14391070-GettyImages-2188910363-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390926.md#1" title="全球礼品卡诈骗激增 买前如何辨别""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/12/id14390927-179302-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390947.md#1" title="上海访民集体进京遭遣返 顾国平曝被警察虐待""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/10/id13852427-36-200RG2095E93-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390934.md#1" title="极越汽车大裁员 中国电动车洗牌风暴来临？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14287715-GettyImages-2147871369-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391506.md#1">香港抗争精神不熄 《宁化飞灰》北美首映</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391478.md#1">洛杉矶“香港地”募款 助香港故事传播全球</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391477.md#1">加州预算哪项优先？ 了解流程可参与</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391462.md#1">川普任命格伦内尔为总统特别任务大使</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391369.md#1">网传北京一零零后的辞职信 爆红全网</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391124.md#1">【军事情报局】A10现身叙利亚 还能再战十年</a><br>
+:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391476.md#1">拜登和韩代总统通话：美韩联盟是印太和平关键</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391506.md#1">香港抗争精神不熄 《宁化飞灰》北美首映</a><br>
+:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391478.md#1">洛杉矶“香港地”募款 助香港故事传播全球</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391477.md#1">加州预算哪项优先？ 了解流程可参与</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391462.md#1">川普任命格伦内尔为总统特别任务大使</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391369.md#1">网传北京一零零后的辞职信 爆红全网</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391124.md#1">【军事情报局】A10现身叙利亚 还能再战十年</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391271.md#1">【翻墙必看】中国“果中贵族”价格大跳水</a><br>
 :clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390037.md#1">年底节日将至 Costco十款美食值得购买</a><br>
-:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391231.md#1">今年美国逾七千商店关门 哪些零售商关店最多</a><br>
-:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391288.md#1">有使用暖气的看过来 专家教你用这招省钱</a><br>
+:clock8: <em>6小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391231.md#1">今年美国逾七千商店关门 哪些零售商关店最多</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390451.md#1">前山西首富1.1亿资产被英国正式没收</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390934.md#1">极越汽车大裁员 中国电动车洗牌风暴来临？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390626.md#1">英意日成立联合隐形战机公司 有三个原因</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/8/n14387027.md#1">停课、隔离 大陆多地学校集体爆发水痘</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390195.md#1">中国多地出现俄货商店 民众：大多东北生产</a><br>
@@ -103,8 +104,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388441.md#1">美国务院：对不公正拘留行为全球追责</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388204.md#1">遭冤刑近二十年 三位法轮功学员的遭遇</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387857.md#1">【净园财经】人民币汇率背后的操盘手</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d973f7ew1lrtq.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d973f7ew1lrtq.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 47,056</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1csyk8uhml3s3.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1csyk8uhml3s3.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 47,056</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
